# sukless-chess

./: .gitignore  AI.cpp  AI.h  App.cpp  App.h  Board.h  BoardManager.cpp  BoardManager.h  BoardManager_helpers.cpp  CMakeLists.txt  ChessAI.cpp  ChessAI.h  ChessUtils.cpp  ChessUtils.h  Game.cpp  Game.h  Piece.cpp  Piece.h  README.md  common_enums.h  main.cpp
